Cross browser testing and fix flex box bugs on IE 11

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: silver;
-  box-shadow:0px 1px 1px deepskyblue;
+  box-shadow: 0px 2px 5px grey;
 }
 
 .Header__LogoWrapper img {
