--- a/src/layouts/PageLayout/PageLayout.scss
+++ b/src/layouts/PageLayout/PageLayout.scss
@@ -7,6 +7,6 @@
 .PageLayout__MainContent {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: 1 1 auto;
   text-align: center;
 }
