--- a/src/routes/Spaceships/components/Spaceship.scss
+++ b/src/routes/Spaceships/components/Spaceship.scss
@@ -5,10 +5,6 @@ body {
 .Spaceship {
   padding: 20px;
   margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
   @media (max-width: 767px) {
     margin-bottom: 0;
